change to modular monolith using Spring Modulith Fixes #22 단일모듈로 변경